<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lavender"
    android:gravity="center">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/no_internet"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/black1"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black1"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_check_internet_connection"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black1"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/retry"
        android:textAllCaps="true"
        android:background="@drawable/internet_selector"
        android:id="@+id/retry"/>

</LinearLayout>