<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    tools:context=".NewsDetailsActivityShort">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newsDetailsToolbar"
        android:theme="@style/AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tool"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backButtonNewsDetailsShort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:paddingStart="5dp"
                android:paddingEnd="20dp"
                android:src="@drawable/arrow_left_solid" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_description"
                android:textSize="25sp"
                android:textColor="@color/black1"
                android:textStyle="bold"
                android:layout_toEndOf="@id/backButtonNewsDetailsShort"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/newsDetailsToolbar"
        android:layout_above="@id/idBtnReadNews">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/idTVNews"
                android:layout_width="match_parent"
                android:layout_height="288dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:padding="3dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/idTVTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVNews"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/title"
                android:textColor="@color/black1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVTitle"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/description"
                android:textColor="@color/black1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTVSubDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/desc"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/sub_description"
                android:textColor="@color/black1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVSubDesc"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/content"
                android:textStyle="bold"
                android:textColor="@color/black1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/idTVContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cont"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/content"
                android:textColor="@color/black1" />

        </RelativeLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/idBtnReadNews"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00BFFF"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/share_solid"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idBtnReadNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/blue_solid_button_bg"
        android:text="@string/read_full_news"
        android:textAllCaps="false"
        android:textColor="@color/backgroundColor"
        android:textStyle="bold" />




</RelativeLayout>