<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.trimob.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        android:layout_above="@id/card_view">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_map"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="@string/please_signup_with_your_information"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Name"
                android:id="@+id/fullname_field"
                android:textColorHint="@color/gray"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorTextColor="#FF0011"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeColor="@color/lavender"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/full_name_4"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/name_signup">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/username_fields"
                android:hint="Username"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorTextColor="#FF0011"
                app:boxStrokeErrorColor="@color/red"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/lavender"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawableStart="@drawable/username"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:id="@+id/username_signup">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Email"
                android:id="@+id/email_field"
                android:textColorHint="@color/gray"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorTextColor="#FF0011"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeColor="@color/lavender"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:id="@+id/email_signup">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/phone_number_field"
                android:hint="Phone Number"
                android:textColorHint="@color/gray"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorTextColor="#FF0011"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeColor="@color/lavender"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:id="@+id/phone_signup">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Password"
                app:passwordToggleEnabled="true"
                android:id="@+id/password_field"
                app:passwordToggleTint="@color/gray"
                android:textColorHint="@color/gray"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorTextColor="#FF0011"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeColor="@color/lavender"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password_svgrepo_com"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:id="@+id/password_signup">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>



            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/signup"
                    app:cornerRadius="32dp"
                    android:id="@+id/btn_reg"/>
                <ProgressBar
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:id="@+id/progressbar_send_otp"/>
            </FrameLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login1"
                app:cornerRadius="32dp"
                android:id="@+id/btn_log"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                />



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>